# url_shortener_rs

./: .env  Cargo.toml
backend/: Cargo.toml  diesel.toml
backend/src/: models.rs  ops.rs  ps_conec.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  routes.rs
frontend/src/components/: form.rs  redirect.rs  register.rs
migrations/2024-09-14-024018_init/: down.sql  up.sql
src/: api.rs  main.rs  models.rs  ops.rs  ps_conec.rs  schema.rs  up.sql
