[package]
name = "url_shortener_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
chrono = "0.4.38"
rand = "0.8.5"